# OpenGL

./: CMakeLists.txt  README.md  rename_to_vcpkg_if_use_vcpkg.json
res/shader/: fragShader.glsl  vertexShader.glsl
src/: indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  vertexBuffer.cpp  vertexBuffer.h
